--- a/config/content.htm
+++ b/config/content.htm
@@ -269,12 +269,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <h2>w12_ch</h2>
 <h2>w16</h2>
 <p><a href="/downloads/Cad2024.pdf">/downloads/Cad2024.pdf</a></p>
-<h2><span>HW2_Exam</span></h2>
-<h3><span>w16_exam1</span></h3>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/SAgrorVu6LQ?si=RuiVW7htKkNjzkc1" title="YouTube video player" width="560"></iframe></p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/XEHdy48pCYY?si=xd1lZVo8_HfuimKS" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wZLZmGmIAtw?si=9jRAtOoDtwb2lbwj" title="YouTube video player" width="560"></iframe> <iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/GsyFO9GlJpo?si=LvdlgivHpa1C6O4O" title="YouTube video player" width="560"></iframe></p>
-<h4><span>w16_exam1.stl</span></h4>
-<p><span></span></p>
+<span></span>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
@@ -300,12 +295,11 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p>
 <p></p>
 <h1>HW2</h1>
-<p>Homework 2 (10%):</p>
-<p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
-<hr/>
-<p>利用 Solvespace 繪製 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件的操作過程與說明影片如下:</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業二之一</p>
-<p style="padding-left: 30px;">所完成的零組件檔案下載</p>
+<h2><span>HW2_Exam</span></h2>
+<h3><span>w16_exam1</span></h3>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/SAgrorVu6LQ?si=RuiVW7htKkNjzkc1" title="YouTube video player" width="560"></iframe></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/XEHdy48pCYY?si=xd1lZVo8_HfuimKS" title="YouTube video player" width="560"></iframe><span> </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wZLZmGmIAtw?si=9jRAtOoDtwb2lbwj" title="YouTube video player" width="560"></iframe><span> </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/GsyFO9GlJpo?si=LvdlgivHpa1C6O4O" title="YouTube video player" width="560"></iframe></p>
+<h4><span>w16_exam1.stl</span></h4>
 <p>利用 NX2312 繪製 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件的操作過程與說明影片如下:</p>
 <p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業二之二</p>
 <p style="padding-left: 30px;">所完成的零件檔案下載</p>
