--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -267,6 +267,8 @@ function initModelParts() {
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
 <h2>w12_ch</h2>
+<h2>w16</h2>
+<p><a href="/downloads/Cad2024.pdf">/downloads/Cad2024.pdf</a></p>
 <h2><span>HW2_Exam</span></h2>
 <h3><span>w16_exam1</span></h3>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/SAgrorVu6LQ?si=RuiVW7htKkNjzkc1" title="YouTube video player" width="560"></iframe></p>
