--- a/content/HW1.html
+++ b/content/HW1.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='w7作業上傳方法.html'>w7作業上傳方法</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='w16.html'>w16</a><li class='has-children'><a href='HW2_Exam-1.html'>HW2_Exam-1</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></li></ul></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam-2.html'>HW2_Exam-2</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='w7作業上傳方法.html'>w7作業上傳方法</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='w16.html'>w16</a></li></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li class='has-children'><a href='HW2_Exam-1.html'>HW2_Exam-1</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></ul><li><a href='HW2_Exam-2.html'>HW2_Exam-2</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w16_exam1 << <a href='w16_exam1.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2<br /><h1>HW1</h1>
+    <div id="tipue_search_content">w16 << <a href='w16.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2<br /><h1>HW1</h1>
 <p>Homework 1 (10%):</p>
 <p>9/26 將github帳號填入Exsel表單，並簡單了解<span>Solvespace使用方式</span></p>
 <p style="padding-left: 30px;">利用 Solvespace 與 NX2312 建立 <a href="https://mde.tw/cad2024/content/Parts.html">Parts</a> 頁面中的零件</p>
@@ -164,7 +164,7 @@ img.add_border {
 <p>HW1 自評分數:</p>
 <p style="padding-left: 30px;">完成上述流程後, 請將 HW1 自評分數輸入 cad2024 自評表單中.</p>
 <p></p>
-<br />w16_exam1 << <a href='w16_exam1.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
+<br />w16 << <a href='w16.html'>Previous</a> <a href='HW2.html'>Next</a> >> HW2</div>
         
     <!-- footer -->
       <div class="container">
