--- a/content/HW2.html
+++ b/content/HW2.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='w7作業上傳方法.html'>w7作業上傳方法</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='w16.html'>w16</a><li class='has-children'><a href='HW2_Exam-1.html'>HW2_Exam-1</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></li></ul></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam-2.html'>HW2_Exam-2</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='w7作業上傳方法.html'>w7作業上傳方法</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='w16.html'>w16</a></li></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li class='has-children'><a href='HW2_Exam-1.html'>HW2_Exam-1</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></ul><li><a href='HW2_Exam-2.html'>HW2_Exam-2</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,21 +141,8 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='HW2_Exam-2.html'>Next</a> >> HW2_Exam-2<br /><h1>HW2</h1>
-<p>Homework 2 (10%):</p>
-<p style="padding-left: 30px;">利用 Solvespace 與 NX 建立 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件</p>
-<hr/>
-<p>利用 Solvespace 繪製 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件的操作過程與說明影片如下:</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業二之一</p>
-<p style="padding-left: 30px;">所完成的零組件檔案下載</p>
-<p>利用 NX2312 繪製 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件的操作過程與說明影片如下:</p>
-<p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業二之二</p>
-<p style="padding-left: 30px;">所完成的零件檔案下載</p>
-<p>HW2 執行心得:</p>
-<p style="padding-left: 30px;">......</p>
-<p>HW2 自評分數:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 HW2 自評分數輸入 cad2024 自評表單中.</p>
-<br />HW1 << <a href='HW1.html'>Previous</a> <a href='HW2_Exam-2.html'>Next</a> >> HW2_Exam-2</div>
+    <div id="tipue_search_content">HW1 << <a href='HW1.html'>Previous</a> <a href='HW2_Exam-1.html'>Next</a> >> HW2_Exam-1<br /><h1>HW2</h1>
+<br />HW1 << <a href='HW1.html'>Previous</a> <a href='HW2_Exam-1.html'>Next</a> >> HW2_Exam-1</div>
         
     <!-- footer -->
       <div class="container">
