--- a/content/w16.html
+++ b/content/w16.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='w7作業上傳方法.html'>w7作業上傳方法</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='w16.html'>w16</a><li class='has-children'><a href='HW2_Exam-1.html'>HW2_Exam-1</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></li></ul></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li><a href='HW2_Exam-2.html'>HW2_Exam-2</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li class='has-children'><a href='Attendance.html'>Attendance</a><ul class='dropdown'><li><a href='W1.html'>W1</a><li><a href='W2.html'>W2</a><li><a href='W3.html'>W3</a><li><a href='w7作業上傳方法.html'>w7作業上傳方法</a><li class='has-children'><a href='w7.html'>w7</a><ul class='dropdown'><li><a href='w7.stl.html'>w7.stl</a></li></ul><li><a href='w9.html'>w9</a><li><a href='w10.html'>w10</a><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w11_hw.stl.html'>w11_hw.stl</a></li></ul><li><a href='w12_ch.html'>w12_ch</a><li><a href='w16.html'>w16</a></li></ul><li><a href='HW1.html'>HW1</a><li class='has-children'><a href='HW2.html'>HW2</a><ul class='dropdown'><li class='has-children'><a href='HW2_Exam-1.html'>HW2_Exam-1</a><ul class='dropdown'><li><a href='w16_exam1.html'>w16_exam1</a></li></ul><li><a href='HW2_Exam-2.html'>HW2_Exam-2</a></li></ul><li class='has-children'><a href='HW3.html'>HW3</a><ul class='dropdown'><li><a href='HW3_Exam.html'>HW3_Exam</a></li></ul><li class='has-children'><a href='HW4.html'>HW4</a><ul class='dropdown'><li><a href='HW4_Exam.html'>HW4_Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,9 +141,11 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW2_Exam-1.html'>Next</a> >> HW2_Exam-1<br /><h1>w16</h1>
+    <div id="tipue_search_content">w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1<br /><h1>w16</h1>
 <p><a href="./../downloads/Cad2024.pdf">/downloads/Cad2024.pdf</a></p>
-<br />w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW2_Exam-1.html'>Next</a> >> HW2_Exam-1</div>
+<span></span>
+<p>自行利用 Github commits 提交記錄評分.</p>
+<br />w12_ch << <a href='w12_ch.html'>Previous</a> <a href='HW1.html'>Next</a> >> HW1</div>
         
     <!-- footer -->
       <div class="container">
