--- a/config/content.htm
+++ b/config/content.htm
@@ -269,7 +269,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <h2>w12_ch</h2>
 <h2>w16</h2>
 <p><a href="/downloads/Cad2024.pdf">/downloads/Cad2024.pdf</a></p>
-<span></span>
+<p><span></span></p>
 <p>自行利用 Github commits 提交記錄評分.</p>
 <h1>HW1</h1>
 <p>Homework 1 (10%):</p>
@@ -361,7 +361,7 @@ window.onload = initModelParts;  // 頁面加載時初始化所有模型
 <p>期末口頭專題報告影片:</p>
 <p style="padding-left: 30px;">......</p>
 <p>期末書面專題報告檔案 (pdf):</p>
-<p style="padding-left: 30px;">......</p>
+<p><a href="/downloads/Cad2024.pdf">/downloads/Cad2024.pdf</a></p>
 <p>電腦輔助設計與實習課程總結心得:</p>
 <p style="padding-left: 30px;">......</p>
 <p>期末報告自評成績:</p>
