--- a/content/Final Report.html
+++ b/content/Final Report.html
@@ -146,7 +146,7 @@ img.add_border {
 <p>期末口頭專題報告影片:</p>
 <p style="padding-left: 30px;">......</p>
 <p>期末書面專題報告檔案 (pdf):</p>
-<p style="padding-left: 30px;">......</p>
+<p><a href="./../downloads/Cad2024.pdf">/downloads/Cad2024.pdf</a></p>
 <p>電腦輔助設計與實習課程總結心得:</p>
 <p style="padding-left: 30px;">......</p>
 <p>期末報告自評成績:</p>
