--- a/content/w16_exam1.html
+++ b/content/w16_exam1.html
@@ -145,11 +145,14 @@ img.add_border {
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/SAgrorVu6LQ?si=RuiVW7htKkNjzkc1" title="YouTube video player" width="560"></iframe></p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/XEHdy48pCYY?si=xd1lZVo8_HfuimKS" title="YouTube video player" width="560"></iframe><span> </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/wZLZmGmIAtw?si=9jRAtOoDtwb2lbwj" title="YouTube video player" width="560"></iframe><span> </span><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/GsyFO9GlJpo?si=LvdlgivHpa1C6O4O" title="YouTube video player" width="560"></iframe></p>
 <h4><span>w16_exam1.stl</span></h4>
+<p>
 <script src="./../cmsimde/static/jsc3d.js" type="text/javascript"></script>
+</p>
 <!-- 模型連結 -->
 <div id="modelLinks1" style="display: none;"><a href="https://s104.cycu.org/~41223149/412231491.stl">模型1</a> <!-- 第一題的模型 --> <a href="https://s104.cycu.org/~41223149/412231492.stl">模型2</a> <!-- 第二題的模型 --> <a href="https://s104.cycu.org/~41223149/412231493.stl">模型3</a> <!-- 第三題的模型 --> <a href="https://s104.cycu.org/~41223149/41223149mix.stl">模型4</a> <!-- 第四題的模型 --></div>
 <!-- 動態生成的模型部分 -->
-<div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;"></div>
+<div id="modelParts1" style="display: flex; flex-wrap: wrap; justify-content: flex-start; gap: 20px;">下載檔案:<a href="./../downloads/41223149_w16_exam1.7z">/downloads/41223149_w16_exam1.7z</a></div>
+<p>
 <script type="text/javascript">
 // 函數用來動態生成模型部件
 function createModelPart(index, url) {
@@ -234,7 +237,10 @@ function initModelParts() {
 
 window.onload = initModelParts;  // 頁面加載時初始化所有模型
 </script>
+</p>
 <p><span></span></p>
+<p></p>
+<p></p>
 <p>利用 NX2312 繪製 <a href="https://mde.tw/cad2024/content/BonW.html">Balance on Wheels</a> 組立件的操作過程與說明影片如下:</p>
 <p style="padding-left: 30px;">影片標題: 國立虎尾科技大學機械設計工程系電腦輔助設計與實習- 作業二之二</p>
 <p style="padding-left: 30px;">所完成的零件檔案下載</p>
